Bug 149195 - Edit Database Link: Impossible to change link of a database with there own registered name.
Summary: Edit Database Link: Impossible to change link of a database with there own re...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:24.2.0 target:7.6.2
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-20 06:13 UTC by Robert Großkopf
Modified: 2023-09-10 11:19 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of messagebox, which doesen't allow to change an link to a database directly. (95.16 KB, image/png)
2022-05-20 06:13 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2022-05-20 06:13:05 UTC
Created attachment 180239 [details]
Screenshot of messagebox, which doesen't allow to change an link to a database directly.

Open LO → Tools → Options → LibreOffice Base → Databases.
Click on a registered database, for example 'Bibliography'.
Click "Edit".
A dialog "Edit Database Link" appears.
Click "OK".
A messagebox appears:
The name 'Bibliography' is already used for another database.
Please choose a different name.

Expected behavior: Dialog "Edit Database Link" will be closed when pressing "OK". Seems the dialog doesn't know anything about the database link, which has been started by the button "Edit". So you could only edit a link by 
changing the registered name, 
pressing "OK",
opening with "Edit",
changing back to the originally name,
pressing "OK".

This buggy behavior appears in 
Version: 7.4.0.0.alpha1 / LibreOffice Community
Build ID: b871abad383583f02eb49c7e49aeae01f6941072
CPU threads: 6; OS: Linux 5.3; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded

It also appears in older versions. Could be it never worked right.
Comment 1 Regis Perdreau 2022-06-08 15:20:58 UTC
Confirmed in 
Version: 7.3.2.2 (x64) / LibreOffice Community
Build ID: 49f2b1bff42cfccbd8f788c8dc32c1c309559be0
CPU threads: 8; OS: Windows 10.0 Build 7600; UI render: Skia/Raster; VCL: win
Locale: fr-FR (fr_FR); UI: fr-FR
Calc: threaded
Comment 2 Julien Nabet 2023-09-09 21:02:37 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

I gave a try with:
https://gerrit.libreoffice.org/c/core/+/156785
Comment 3 Commit Notification 2023-09-10 07:31:43 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/44d50f0226b1003f60dd0a890e2309cac9660812

tdf#149195: Impossible to change link of a DB and keep the same registered name

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Julien Nabet 2023-09-10 07:32:28 UTC
Cherry-pick waiting for review here:
https://gerrit.libreoffice.org/c/core/+/156735
Comment 5 Commit Notification 2023-09-10 11:19:05 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/574316ea568a09074cda20dd7953f578b081a754

tdf#149195: Impossible to change link of a DB and keep the same registered name

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.