tdf#149195: Impossible to change link of a DB and keep the same registered name

Just test nEntry to know if it's a new entry (and so the name must be different from an existing one)

Change-Id: I3bda6b1d3d9bae3d79fdfc2cb1323f20add410c6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156785
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Jenkins
(cherry picked from commit a410b8f1111c738604ad2f67c111f98d91761051)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156735
Reviewed-by: Lionel Mamane <lionel@mamane.lu>